# download-symbols-playground

./: CMakeLists.txt  WindowsSymbolsResolver.cpp  WindowsSymbolsResolver.h  diaUtil.h  dia_callback.h  main.cpp  md5_util.cpp  md5_util.h  symsrv_callback.h  timer.h  util.h
common/src/: WindowsSymbolsResolver.cpp  WindowsSymbolsResolver.h  diaUtil.cpp  diaUtil.h  symsrv_callback.h  util.cpp  util.h
data/frames/folder/: awt.dll.frames  instrument.dll.frames  jvm.dll.frames  libasyncProfiler.dll.frames  net.dll.frames  nio.dll.frames  ucrtbased.dll.frames
data/frames/folder1/: COMCTL32.dll.frames  KERNEL32.DLL.frames  KERNELBASE.dll.frames  USER32.dll.frames  VCRUNTIME140.dll.frames  gdi32full.dll.frames  jdwp.dll.frames  jvm.dll.frames  ntdll.dll.frames  textinputframework.dll.frames  ucrtbase.dll.frames  verify.dll.frames  win32u.dll.frames  zip.dll.frames
data/frames/folder11/: COMCTL32.dll.frames  KERNEL32.DLL.frames  KERNELBASE.dll.frames  MSCTF.dll.frames  USER32.dll.frames  VCRUNTIME140.dll.frames  awt.dll.frames  fontmanager.dll.frames  freetype.dll.frames  java.dll.frames  jvm.dll.frames  libasyncProfiler.dll11.frames  libasyncProfiler.dll940.frames  ntdll.dll.frames  textinputframework.dll.frames  ucrtbase.dll.frames  win32u.dll.frames  zip.dll.frames
data/frames/folder2/: GDI32.dll.frames  IMM32.DLL.frames  MSCTF.dll.frames  WS2_32.dll.frames  awt.dll.frames  dt_socket.dll.frames  fontmanager.dll.frames  freetype.dll.frames  java.dll.frames  jimage.dll.frames  jvm.dll.frames  uxtheme.dll.frames
data/frames/folder6/: CoreMessaging.dll.frames  CoreUIComponents.dll.frames  KERNELBASE.dll.frames  USER32.dll.frames  VCRUNTIME140.dll.frames  WS2_32.dll.frames  java.dll.frames  jdwp.dll.frames  jvm.dll.frames  libasyncProfiler.dll.frames  mswsock.dll.frames  net.dll.frames  nio.dll.frames  ntdll.dll.frames  ucrtbase.dll.frames  uxtheme.dll.frames  win32u.dll.frames
data/frames/folder8/: COMCTL32.dll.frames  GDI32.dll.frames  IMM32.DLL.frames  KERNEL32.DLL.frames  MSCTF.dll.frames  awt.dll.frames  fontmanager.dll.frames  gdi32full.dll.frames  instrument.dll.frames  jvm.dll.frames  (+4 more)
(+25 files in other folders)
